# DVARS

./: pyproject.toml
Python/DVARS.egg-info/: PKG-INFO
